--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,17 +31,17 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
     "react-paypal-button-v2": "^2.6.3",
-    "react-redux": "^7.2.6",
     "react-responsive-carousel": "^3.2.22",
+    "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.0",
     "react-toastify": "^8.1.0",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
