--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-google-charts": "^3.0.15",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.2",
     "react-paypal-button-v2": "^2.6.3",
     "react-responsive-carousel": "^3.2.22",
     "react-router-bootstrap": "^0.26.0",
