--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,6 @@
-MONGODB_URL=mongodb://localhost/amazona-new
+MONGODB_URI=mongodb://localhost/amazona-new
+JWT_SECRET=your-jwt-secret
+PAYPAL_CLIENT_ID=your-paypal-client-id
+GOOGLE_API_KEY=your-google-api-key
+MAILGUN_API_KEY=your-mailgun-api-key
+MAILGUN_DOMIAN=your-mailgun-domain
